[gd_scene load_steps=28 format=3 uid="uid://bkyl1jp3lj36v"]

[ext_resource type="Script" path="res://Screens/main.gd" id="1_eqxpj"]
[ext_resource type="PackedScene" uid="uid://br8j0dbxk0gmh" path="res://Floors/floor.tscn" id="2_d85bv"]
[ext_resource type="FontFile" uid="uid://bgiywmusee28u" path="res://Assets/UI/Marav2.ttf" id="3_qesbo"]
[ext_resource type="Texture2D" uid="uid://c2nuxdwin3slv" path="res://Assets/UI/brickIcon.png" id="4_l6brj"]
[ext_resource type="PackedScene" uid="uid://dx2m410fn5f6t" path="res://Characters/Builder/builder.tscn" id="4_r1sbw"]
[ext_resource type="Texture2D" uid="uid://dj3lam7b5ypx" path="res://Assets/UI/goldIcon.png" id="5_x8i3h"]
[ext_resource type="PackedScene" uid="uid://j76tjb32kfks" path="res://Characters/Merchant/merchant.tscn" id="5_ycq4u"]
[ext_resource type="PackedScene" uid="uid://xh6tnfb71fbs" path="res://Characters/Mason/mason.tscn" id="6_qu6a5"]
[ext_resource type="PackedScene" uid="uid://butxgvvrm7hqp" path="res://Characters/Shepherd/shepherd.tscn" id="7_sbhwi"]
[ext_resource type="Theme" uid="uid://xn2hdy3rgr76" path="res://Assets/UI/theme.tres" id="8_hphvt"]
[ext_resource type="PackedScene" uid="uid://cqf5bqdtxntlp" path="res://Characters/Warrior/warrior.tscn" id="8_xfuhw"]
[ext_resource type="AudioStream" uid="uid://cbr620ywkvhpa" path="res://Music/SFX/layered sound.mp3" id="9_0wmer"]
[ext_resource type="PackedScene" uid="uid://cd7ocv71t8jvt" path="res://System/resource_effect.tscn" id="9_eoorw"]
[ext_resource type="PackedScene" uid="uid://c1gfra0m6i3kb" path="res://Characters/Thief/thief.tscn" id="9_m3587"]
[ext_resource type="Texture2D" uid="uid://u8qrlqhbdaes" path="res://Assets/Floor/FloorRoof.png" id="10_3tu5u"]
[ext_resource type="AudioStream" uid="uid://bscdbq8e1i213" path="res://Music/bgMusic.mp3" id="10_stmio"]
[ext_resource type="AudioStream" uid="uid://du5co0mbv7ofb" path="res://Music/SFX/stone on stone action.wav" id="11_4l48r"]
[ext_resource type="AudioStream" uid="uid://h7qk0fhjaaa7" path="res://Music/SFX/187 WOOSH B.wav" id="11_t20f0"]
[ext_resource type="AudioStream" uid="uid://bshc5yp51en76" path="res://Music/SFX/money-pickup-2-89563.mp3" id="12_diw7j"]
[ext_resource type="Texture2D" uid="uid://bf13ejbuol7vp" path="res://Assets/Floor/FloorLobby.png" id="12_n0vtn"]
[ext_resource type="Script" path="res://Screens/sound_manager.gd" id="15_lqehw"]
[ext_resource type="Script" path="res://System/sell_dropbox.gd" id="19_hyppe"]
[ext_resource type="PackedScene" uid="uid://ec1qcbsk35qb" path="res://System/drop_component.tscn" id="19_ufc1y"]
[ext_resource type="Script" path="res://Screens/settings.gd" id="24_8qx4t"]

[sub_resource type="Gradient" id="Gradient_h608w"]
colors = PackedColorArray(0.156863, 0.8, 0.87451, 1, 0.1566, 0.79866, 0.87, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5dr55"]
gradient = SubResource("Gradient_h608w")
fill_from = Vector2(1, 0)
fill_to = Vector2(0.0683761, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_puaxa"]
size = Vector2(256, 128)

[node name="Main" type="Node2D"]
process_mode = 1
script = ExtResource("1_eqxpj")
tiers = ExtResource("2_d85bv")
builders = ExtResource("4_r1sbw")
merchants = ExtResource("5_ycq4u")
masons = ExtResource("6_qu6a5")
shepherds = ExtResource("7_sbhwi")
warriors = ExtResource("8_xfuhw")
thieves = ExtResource("9_m3587")
resourceEffects = ExtResource("9_eoorw")

[node name="ResourceEffects" type="Node2D" parent="."]

[node name="ColorRectLeft" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 2
color = Color(0.156863, 0.8, 0.87451, 1)

[node name="ColorRectRight" type="ColorRect" parent="."]
visible = false
offset_left = 768.0
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Tower" type="ScrollContainer" parent="."]
offset_left = 384.0
offset_right = 776.0
offset_bottom = 648.0
size_flags_vertical = 8
follow_focus = true
horizontal_scroll_mode = 0

[node name="Floors" type="VBoxContainer" parent="Tower"]
unique_name_in_owner = true
custom_minimum_size = Vector2(384, 0)
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/separation = 0
alignment = 1

[node name="TopFloor" type="TextureRect" parent="Tower/Floors"]
custom_minimum_size = Vector2(384, 128)
layout_mode = 2
texture = ExtResource("10_3tu5u")

[node name="Button" type="Button" parent="Tower/Floors/TopFloor"]
layout_mode = 0
offset_top = 16.0
offset_right = 120.0
offset_bottom = 80.0
text = "BUILD NEW 
FLOOR"

[node name="NewFloorLabel" type="Label" parent="Tower/Floors/TopFloor"]
layout_mode = 0
offset_left = 136.0
offset_top = -8.0
offset_right = 352.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("3_qesbo")
theme_override_font_sizes/font_size = 35
text = "BRICKS NEEDED:
"
vertical_alignment = 1

[node name="NewFloorLabel2" type="Label" parent="Tower/Floors/TopFloor"]
layout_mode = 0
offset_left = 136.0
offset_top = 32.0
offset_right = 352.0
offset_bottom = 80.0
theme_override_fonts/font = ExtResource("3_qesbo")
theme_override_font_sizes/font_size = 35
text = "BUILDERS NEEDED:
"
vertical_alignment = 1

[node name="Lobby" parent="Tower/Floors" instance=ExtResource("2_d85bv")]
layout_mode = 2
texture = ExtResource("12_n0vtn")
floorName = "Lobby"

[node name="GodBar" type="ProgressBar" parent="."]
modulate = Color(1, 0.966667, 0, 1)
offset_left = 16.0
offset_top = 16.0
offset_right = 368.0
offset_bottom = 80.0
show_percentage = false

[node name="BrickLabel" type="Label" parent="."]
offset_left = 152.0
offset_top = 96.0
offset_right = 280.0
offset_bottom = 224.0
theme_override_fonts/font = ExtResource("3_qesbo")
theme_override_font_sizes/font_size = 100
text = "0"
vertical_alignment = 1

[node name="GoldLabel" type="Label" parent="."]
offset_left = 152.0
offset_top = 232.0
offset_right = 280.0
offset_bottom = 360.0
theme_override_fonts/font = ExtResource("3_qesbo")
theme_override_font_sizes/font_size = 100
text = "0"
vertical_alignment = 1

[node name="BrickIcon" type="Sprite2D" parent="."]
position = Vector2(80, 160)
scale = Vector2(2, 2)
texture = ExtResource("4_l6brj")

[node name="GoldIcon" type="Sprite2D" parent="."]
position = Vector2(80, 296)
scale = Vector2(2, 2)
texture = ExtResource("5_x8i3h")

[node name="ThiefTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="OutOfFloorCharacters" type="Node" parent="."]

[node name="SoundManager" type="Node" parent="."]
script = ExtResource("15_lqehw")

[node name="NewFloor" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource("9_0wmer")

[node name="BGMusic" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource("10_stmio")
autoplay = true

[node name="Steal" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource("11_t20f0")

[node name="Gold" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource("12_diw7j")
volume_db = 5.0

[node name="Brick" type="AudioStreamPlayer" parent="SoundManager"]
stream = ExtResource("11_4l48r")

[node name="Console" type="RichTextLabel" parent="."]
offset_left = 16.0
offset_top = 400.0
offset_right = 384.0
offset_bottom = 648.0
bbcode_enabled = true
scroll_active = false

[node name="ConsoleGradient" type="Sprite2D" parent="."]
position = Vector2(159.976, 515.878)
rotation = 1.5708
scale = Vector2(4.1255, 4.99935)
texture = SubResource("GradientTexture2D_5dr55")

[node name="TabContainer" type="TabContainer" parent="."]
offset_left = 768.0
offset_right = 1152.0
offset_bottom = 648.0
tab_alignment = 2
current_tab = 0

[node name="Residents" type="MarginContainer" parent="TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Residents"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="BuilderButton" type="Button" parent="TabContainer/Residents/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("8_hphvt")
text = "Builder
10 Gold"

[node name="MerchantButton" type="Button" parent="TabContainer/Residents/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("8_hphvt")
text = "Merchant
15 Gold"

[node name="MasonButton" type="Button" parent="TabContainer/Residents/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("8_hphvt")
text = "Mason
20 Gold"

[node name="ShepherdButton" type="Button" parent="TabContainer/Residents/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("8_hphvt")
text = "Shepherd
30 Gold"

[node name="WarriorButton" type="Button" parent="TabContainer/Residents/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("8_hphvt")
text = "Warrior
30 Gold"

[node name="SellDropbox" type="Button" parent="TabContainer/Residents/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("8_hphvt")
theme_override_font_sizes/font_size = 100
disabled = true
text = "SELL"
script = ExtResource("19_hyppe")

[node name="DropComponent" parent="TabContainer/Residents/VBoxContainer/SellDropbox" instance=ExtResource("19_ufc1y")]

[node name="Area2D" type="Area2D" parent="TabContainer/Residents/VBoxContainer/SellDropbox"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TabContainer/Residents/VBoxContainer/SellDropbox/Area2D"]
position = Vector2(128, 64)
shape = SubResource("RectangleShape2D_puaxa")

[node name="Settings" type="MarginContainer" parent="TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("24_8qx4t")
metadata/_tab_index = 1

[node name="HBoxContainer" type="BoxContainer" parent="TabContainer/Settings"]
layout_mode = 2
alignment = 2
vertical = true

[node name="BoxContainer" type="BoxContainer" parent="TabContainer/Settings/HBoxContainer"]
layout_mode = 2
alignment = 2

[node name="CodeLabel" type="Label" parent="TabContainer/Settings/HBoxContainer/BoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="CodeLine" type="LineEdit" parent="TabContainer/Settings/HBoxContainer/BoxContainer"]
custom_minimum_size = Vector2(184, 32)
layout_mode = 2
placeholder_text = "Insert Code Here..."

[node name="VolumeSliders" type="VBoxContainer" parent="TabContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TopLabels" type="HBoxContainer" parent="TabContainer/Settings/VolumeSliders"]
layout_mode = 2

[node name="Music" type="Label" parent="TabContainer/Settings/VolumeSliders/TopLabels"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "Music"
horizontal_alignment = 1

[node name="Sfx" type="Label" parent="TabContainer/Settings/VolumeSliders/TopLabels"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "SFX"
horizontal_alignment = 1

[node name="Sliders" type="HBoxContainer" parent="TabContainer/Settings/VolumeSliders"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="MusicSlider" type="VSlider" parent="TabContainer/Settings/VolumeSliders/Sliders"]
custom_minimum_size = Vector2(64, 448)
layout_mode = 2
max_value = 1.0
step = 0.05
value = 0.5
tick_count = 5
ticks_on_borders = true

[node name="SfxSlider" type="VSlider" parent="TabContainer/Settings/VolumeSliders/Sliders"]
custom_minimum_size = Vector2(64, 448)
layout_mode = 2
max_value = 1.0
step = 0.1
value = 0.5
tick_count = 5
ticks_on_borders = true

[node name="PercentLabels" type="HBoxContainer" parent="TabContainer/Settings/VolumeSliders"]
layout_mode = 2

[node name="MusicPercent" type="Label" parent="TabContainer/Settings/VolumeSliders/PercentLabels"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "100%"
horizontal_alignment = 1

[node name="SfxPercent" type="Label" parent="TabContainer/Settings/VolumeSliders/PercentLabels"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "100%"
horizontal_alignment = 1

[connection signal="pressed" from="Tower/Floors/TopFloor/Button" to="." method="new_floor"]
[connection signal="timeout" from="ThiefTimer" to="." method="_on_thief_timer_timeout"]
[connection signal="pressed" from="TabContainer/Residents/VBoxContainer/BuilderButton" to="." method="_on_builder_button_pressed"]
[connection signal="pressed" from="TabContainer/Residents/VBoxContainer/MerchantButton" to="." method="_on_merchant_button_pressed"]
[connection signal="pressed" from="TabContainer/Residents/VBoxContainer/MasonButton" to="." method="_on_mason_button_pressed"]
[connection signal="pressed" from="TabContainer/Residents/VBoxContainer/ShepherdButton" to="." method="_on_shepherd_button_pressed"]
[connection signal="pressed" from="TabContainer/Residents/VBoxContainer/WarriorButton" to="." method="_on_warrior_button_pressed"]
[connection signal="text_changed" from="TabContainer/Settings/HBoxContainer/BoxContainer/CodeLine" to="TabContainer/Settings" method="_on_code_textbox_text_changed"]
[connection signal="text_submitted" from="TabContainer/Settings/HBoxContainer/BoxContainer/CodeLine" to="TabContainer/Settings" method="_on_line_edit_text_submitted"]
[connection signal="value_changed" from="TabContainer/Settings/VolumeSliders/Sliders/MusicSlider" to="SoundManager" method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Settings/VolumeSliders/Sliders/MusicSlider" to="TabContainer/Settings" method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Settings/VolumeSliders/Sliders/SfxSlider" to="SoundManager" method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Settings/VolumeSliders/Sliders/SfxSlider" to="TabContainer/Settings" method="_on_sfx_slider_value_changed"]
